feat: criação de modulo para controlar a inscrição
