# cmd/api/main.go
@@ -76,6 +76,8 @@ import (
 	clientStripe "github.com/ProTrack-Solutions/protrack-api/internal/stripe/client"
 	stripeHandler "github.com/ProTrack-Solutions/protrack-api/internal/stripe/handler"
 	stripeService "github.com/ProTrack-Solutions/protrack-api/internal/stripe/service"
+	subscriptionManagementHandler "github.com/ProTrack-Solutions/protrack-api/internal/subscription_management/handler"
+	subscriptionManagementService "github.com/ProTrack-Solutions/protrack-api/internal/subscription_management/service"
 	subscriptionPaymentMethodsHandler "github.com/ProTrack-Solutions/protrack-api/internal/subscription_payment_methods/handler"
 	subscriptionPaymentMethodsRepository "github.com/ProTrack-Solutions/protrack-api/internal/subscription_payment_methods/repository"
 	subscriptionPaymentMethodsService "github.com/ProTrack-Solutions/protrack-api/internal/subscription_payment_methods/service"
@@ -166,7 +168,7 @@ func main() {
 	r.Use(middleware.GinDiscordErrorMiddleware(discordLogger))
 
 	if cfg.AppEnv != "production" {
-		r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+		r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	}
 
 	logger.InitLogger(cfg.AppEnv)
@@ -236,7 +238,8 @@ func main() {
 	departmentsService := departmentsService.NewService(departmentsRepository)
 	productsCategoriesService := productsCategoriesService.NewService(productsCategoriesRepository)
 	productsService := productsService.NewService(productsRepository, db.Pool)
-	stripeService := stripeService.NewService(cfg, subscriptionsService, subscriptionPaymentMethodsService)
+	stripeService := stripeService.NewService(cfg, subscriptionsService)
+	subscriptionManagementService := subscriptionManagementService.NewService(cfg, subscriptionsService, subscriptionPaymentMethodsService, discordLogger)
 	authService := authService.NewService(stripeService, usersService, companiesService, subscriptionPaymentMethodsService, subscriptionsService, plansService, jwtManager, db.Pool)
 	customersService := customersService.NewService(customersRepository, db.Pool)
 	saleItemsService := saleItemsService.NewService(saleItemsRepository, db.Pool, productsRepository)
@@ -277,7 +280,8 @@ func main() {
 	whatsappHandler := whatsappHandler.NewHandler(whatsappService, jwtManager, blacklist)
 	annoucementsHandler := annoucementsHandler.NewHandler(annountmentsService, jwtManager, blacklist)
 	plansHandler := plansHandler.NewHandler(plansService)
-	stripeHandler := stripeHandler.NewHandler(stripeService, cfg, jwtManager, blacklist)
+	stripeHandler := stripeHandler.NewHandler(stripeService, cfg)
+	subscriptionManagementHandler := subscriptionManagementHandler.NewHandler(subscriptionManagementService, jwtManager, blacklist)
 	labelHandler := labelHandler.NewHandler(labelService, jwtManager, blacklist)
 
 	api := r.Group("/api/v1")
@@ -305,6 +309,7 @@ func main() {
 	subscriptionPaymentMethodsHandler.RegisterRoutes(api)
 	subscriptionsHandler.RegisterRoute(api)
 	stripeHandler.RegisterRoutes(api)
+	subscriptionManagementHandler.RegisterRoutes(api)
 	labelHandler.RegisterRoutes(api)
 
 	r.GET("/health", func(c *gin.Context) {
