# internal/subscription_management/handler/subscription_management_route.go
@@ -1,0 +1,15 @@
+package handler
+
+import (
+	"github.com/ProTrack-Solutions/protrack-api/internal/adapters/http/middleware"
+	"github.com/gin-gonic/gin"
+)
+
+func (h *Handler) RegisterRoutes(r *gin.RouterGroup) {
+	authorized := r.Group("/subscription-management").Use(middleware.AuthMiddleware(h.jwtManager, h.blacklist))
+	{
+		authorized.POST("/payment-methods", h.AddPaymentMethod)
+		authorized.PUT("/payment-methods/:id/default", h.UpdateDefaultPaymentMethod)
+		authorized.PUT("/subscription/cancel", h.CancelSubscription)
+	}
+}
